<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/normal_map"
          android:title="@string/normal_map"
          app:showAsAction="never"/>
    <item android:id="@+id/hybrid_map"
          android:title="@string/hybrid_map"
          app:showAsAction="never"/>
    <item android:id="@+id/satellite_map"
          android:title="@string/satellite_map"
          app:showAsAction="never"/>
    <item android:id="@+id/terrain_map"
          android:title="@string/terrain_map"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_search"
          android:title="@string/search_hint"
          android:icon="@drawable/ic_search"
          app:showAsAction="ifRoom"
          android:iconifiedByDefault="false"
          app:actionViewClass="android.widget.SearchView"/>
    <item android:id="@+id/settings"
          android:title="@string/settings"
          android:icon="@drawable/ic_settings_black_18dp"
          app:showAsAction="collapseActionView|ifRoom"/>
</menu>