<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/spacing_1x"
              android:background="@android:color/transparent">

    <!-- Is Decision Maker input Field -->
    <LinearLayout
            android:id="@+id/decisionMakerTypeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1x"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:text="@string/meeting_results_contact_type_title"
                android:textSize="@dimen/text_size_1_5x"/>

        <ToggleButton
                android:id="@+id/decisionMakerIsDecisionMakerToggleButton"
                android:layout_width="@dimen/business_info_closed_button_width"
                android:layout_height="@dimen/business_info_closed_button_height"
                android:background="@drawable/business_info_meeting_btn_selector"
                android:textAllCaps="false"
                android:textColor="@android:color/transparent"
                android:textOff="@string/yes"
                android:textOn="@string/no"/>

    </LinearLayout>


    <!-- Name input Field -->
    <RelativeLayout
            android:id="@+id/meetingResultsContactNameLayout"
            android:layout_height="@dimen/spacing_12x"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_1x"
            android:background="@android:color/transparent">

        <EditText
                android:id="@+id/meetingResultsContactNameET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_5x"
                android:background="@drawable/borderedt"
                android:padding="@dimen/spacing_1x"
                android:imeOptions="actionNext"
                android:textSize="@dimen/text_size_1_5x"
                android:textColorHint="@color/registration_hint_color"
                android:hint="@string/add_decision_maker_name_hint"
                android:textColor="@color/white"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_1x"
                android:textSize="@dimen/text_size_1_5x"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:text="@string/add_business_name_title"/>
    </RelativeLayout>

    <!-- Email input Field -->
    <RelativeLayout
            android:id="@+id/meetingResultsContactEmailLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_3x"
            android:layout_height="@dimen/spacing_12x"
            android:background="@android:color/transparent">

        <EditText
                android:id="@+id/meetingResultsContactEmailET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_5x"
                android:background="@drawable/borderedt"
                android:padding="@dimen/spacing_1x"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textSize="@dimen/text_size_1_5x"
                android:textColorHint="@color/registration_hint_color"
                android:hint="@string/add_business_email_hint"
                android:textColor="@color/white"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_1x"
                android:textSize="@dimen/text_size_1_5x"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:text="@string/add_business_email_title"/>
    </RelativeLayout>


    <!-- Phone input Field -->
    <RelativeLayout
            android:id="@+id/meetingResultsContactPhoneLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_3x"
            android:layout_height="@dimen/spacing_12x"
            android:background="@android:color/transparent">

        <EditText
                android:id="@+id/meetingResultsContactPhoneET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_5x"
                android:background="@drawable/borderedt"
                android:padding="@dimen/spacing_1x"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:textSize="@dimen/text_size_1_5x"
                android:textColorHint="@color/registration_hint_color"
                android:hint="@string/add_business_phone_hint"
                android:textColor="@color/white"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_1x"
                android:textSize="@dimen/text_size_1_5x"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:text="@string/add_business_phone_title"/>
    </RelativeLayout>

    <!-- Comment input Field -->
    <RelativeLayout
            android:id="@+id/meetingResultsContactCommentLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_3x"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

        <EditText
                android:id="@+id/meetingResultsContactCommentET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_5x"
                android:background="@drawable/borderedt"
                android:padding="@dimen/spacing_1x"
                android:lines="5"
                android:maxLines="5"
                android:gravity="top"
                android:imeOptions="actionNext"
                android:textSize="@dimen/text_size_1_5x"
                android:textColorHint="@color/registration_hint_color"
                android:hint="@string/add_business_comment_hint"
                android:textColor="@color/white"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_1x"
                android:textSize="@dimen/text_size_1_5x"
                android:layout_marginTop="0dp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:text="@string/add_business_comment_title"/>
    </RelativeLayout>

    <!-- Vertical dashed line -->
    <ImageView
            android:id="@+id/verticalLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/decision_makers_divider_image"
            android:layout_marginBottom="@dimen/spacing_1x"
            android:layout_marginTop="@dimen/spacing_3x"/>

    <TextView
            android:id="@+id/meetingResultsAddDecisionMakerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_decision_maker"
            android:textSize="@dimen/text_size_1_0x"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:layout_gravity="end"/>

    <ImageView
            android:id="@+id/meetingResultsAddDecisionMakerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white"
            android:layout_marginTop="@dimen/spacing_1x"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/spacing_1x"
            android:background="@android:color/transparent"/>


</LinearLayout>